[project]
name = "games-project-alimuradiva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
start = "VD_games.scripts.VD_main:main"
VD-games = "VD_games.scripts.VD_games:main"

[tool.uv]
package = true
