[project]
name = "games-project-alimuradiva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
start = "VD_games.scripts.VD_main:main"
VD-games = "VD_games.scripts.VD_games:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-calc = "VD_games.scripts.VD_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

